--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "simplesamlphp"]
-	path = simplesamlphp
+	path = extlib/simplesamlphp
 	url = git@github.com:simplesamlphp/simplesamlphp.git
 [submodule "saml2"]
-	path = saml2
+	path = extlib/saml2
 	url = git@github.com:simplesamlphp/saml2.git
 [submodule "xmlseclibs"]
     branch = 1.4
-	path = xmlseclibs
+	path = extlib/xmlseclibs
 	url = git@github.com:robrichards/xmlseclibs.git
