--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,6 @@ script:
 # - moodle-plugin-ci csslint    # No CSS
   - moodle-plugin-ci shifter
 # - moodle-plugin-ci jshint     # No JS
-# - moodle-plugin-ci phpunit    # No tests yet
+  - moodle-plugin-ci phpunit
 # - moodle-plugin-ci behat      # No tests yet
 
