--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ cache:
     - $HOME/.composer/cache
 
 php:
- # - 5.4
- # - 5.5
  - 5.6
  - 7.0
 
@@ -24,15 +22,16 @@ matrix:
 
 env:
  matrix:
-# 2.8 is required for core_date - we can work around this if there is demand
-#  - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
-#  - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-#  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
-#  - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-#  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
-#  - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - cd ../..
