--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
   - moodle-plugin-ci phpcpd
 # - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
+  - moodle-plugin-ci validate
 # - moodle-plugin-ci csslint    # No CSS
   - moodle-plugin-ci shifter
 # - moodle-plugin-ci jshint     # No JS
