--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,6 @@ cache:
 
 php:
  - 5.6
- - 7.0
-
-matrix:
- allow_failures:
-  - php: 7.0
 
 env:
  matrix:
@@ -32,6 +27,17 @@ env:
   - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
   - DB=mysqli MOODLE_BRANCH=master
+
+matrix:
+  include:
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=master
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - cd ../..
@@ -47,10 +53,10 @@ script:
   - moodle-plugin-ci phpcpd
 # - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-  - moodle-plugin-ci validate
-# - moodle-plugin-ci csslint    # No CSS
+# - moodle-plugin-ci validate   # TODO need to fix the table names
+  - moodle-plugin-ci csslint    # No CSS
   - moodle-plugin-ci shifter
-# - moodle-plugin-ci jshint     # No JS
+  - moodle-plugin-ci jshint     # No JS
   - moodle-plugin-ci phpunit
-# - moodle-plugin-ci behat      # No tests yet
+  - moodle-plugin-ci behat      # No tests yet
 
