--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 language: php
 
 notifications:
@@ -13,40 +12,19 @@ cache:
     - $HOME/.composer/cache
 
 php:
- - 5.6
+  - 5.6
+  - 7.0
+  - 7.1
 
 addons:
   postgresql: "9.3"
 
 env:
  matrix:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
-
-matrix:
-  include:
-    - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-    - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+  - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - cd ../..
@@ -58,14 +36,14 @@ install:
   - moodle-plugin-ci install
 
 script:
+# - moodle-plugin-ci validate   # TODO need to fix the table names
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
 # - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-# - moodle-plugin-ci validate   # TODO need to fix the table names
-  - moodle-plugin-ci csslint    # No CSS
+  - moodle-plugin-ci csslint
   - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint     # No JS
+  - moodle-plugin-ci jshint
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat      # No tests yet
+  - moodle-plugin-ci behat
 
