--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,13 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=pgsql MOODLE_BRANCH=master
+  - DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=mysqli MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
 
 matrix:
   include:
@@ -40,13 +40,13 @@ matrix:
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=master
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
     - php: 7.0
       env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
     - php: 7.0
       env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=master
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
 
 before_install:
   - cd ../..
