--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,17 @@ addons:
   postgresql: "9.3"
 
 env:
- matrix:
   - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=mysqli MOODLE_BRANCH=master
+
+matrix:
+  exclude:
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=master
+    - php: 5.6
+      env: DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - cd ../..
