--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,11 @@ matrix:
     - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=master
     - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
+    - php: 5.6
       env: DB=mysqli MOODLE_BRANCH=master
+    - php: 5.6
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
 
 before_install:
   - cd ../..
