--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,22 @@
 language: php
 
-notifications:
-  email:
-    recipients:
-    - brendan@catalyst-au.net
-
 sudo: false
+
+addons:
+  firefox: "47.0.1"
+  postgresql: "9.3"
+  apt:
+    packages:
+      - oracle-java8-installer
+      - oracle-java8-set-default
 
 cache:
   directories:
     - $HOME/.composer/cache
+    - $HOME/.npm
 
 php:
-  - 5.6
   - 7.0
-  - 7.1
-
-addons:
-  postgresql: "9.3"
 
 env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
@@ -28,34 +27,31 @@ env:
   - DB=mysqli MOODLE_BRANCH=master
 
 matrix:
-  exclude:
+  include:
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=master
-    - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
-    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+    - php: 7.1
       env: DB=mysqli MOODLE_BRANCH=master
-    - php: 5.6
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
 
 before_install:
+  - phpenv config-rm xdebug.ini
+  - nvm install 8.9
+  - nvm use 8.9
   - cd ../..
-  - composer selfupdate
-  - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
+  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install
+  - moodle-plugin-ci install -vvv
 
 script:
-# - moodle-plugin-ci validate   # TODO need to fix the table names
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd
-  - moodle-plugin-ci codechecker
-  - moodle-plugin-ci csslint
-  - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint
+# - moodle-plugin-ci phpmd        # TODO needs fixing
+# - moodle-plugin-ci codechecker  # TODO needs fixing
+# - moodle-plugin-ci validate     # TODO need to fix the table names
+  - moodle-plugin-ci savepoints
+  - moodle-plugin-ci mustache
+  - moodle-plugin-ci grunt
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
-
