--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-
 language: php
-
-notifications:
-  email:
-    recipients:
-    - brendan@catalyst-au.net
 
 sudo: false
 
@@ -20,33 +14,17 @@ addons:
 
 env:
  matrix:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
+  - MOODLE_BRANCH=MOODLE_27_STABLE DB=mysqli
+  - MOODLE_BRANCH=MOODLE_28_STABLE DB=pgsql
+  - MOODLE_BRANCH=MOODLE_29_STABLE DB=mysqli
+  - MOODLE_BRANCH=MOODLE_30_STABLE DB=pgsql
 
 matrix:
   include:
     - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+      env: MOODLE_BRANCH=MOODLE_31_STABLE DB=pgsql
     - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 7.0
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
+      env: MOODLE_BRANCH=MOODLE_32_STABLE DB=mysqli
 
 before_install:
   - cd ../..
@@ -55,17 +33,17 @@ before_install:
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install
+  - git config --global "url.https://github.com/.insteadOf" "git@github.com:"
+  - moodle-plugin-ci install -vvv
 
 script:
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd
+  - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
 # - moodle-plugin-ci validate   # TODO need to fix the table names
-  - moodle-plugin-ci csslint    # No CSS
+  - moodle-plugin-ci csslint
   - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint     # No JS
+  - moodle-plugin-ci jshint
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat      # No tests yet
-
+  - moodle-plugin-ci behat
