--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
  - 5.6
 
 addons:
+  hosts:
+    - simplesamlphp.test
   firefox: "35.0.1"
   postgresql: "9.3"
   apt:
@@ -18,20 +20,24 @@ addons:
       - oracle-java8-set-default
 
 env:
- matrix:
-  - MOODLE_BRANCH=MOODLE_27_STABLE DB=mysqli
-  - MOODLE_BRANCH=MOODLE_28_STABLE DB=pgsql
-  - MOODLE_BRANCH=MOODLE_29_STABLE DB=mysqli
-  - MOODLE_BRANCH=MOODLE_30_STABLE DB=pgsql
+  global:
+    # Our behat tests are designed for Moodle 31+
+    - RUN_BEHAT=no
+  matrix:
+    - MOODLE_BRANCH=MOODLE_27_STABLE DB=mysqli
+    - MOODLE_BRANCH=MOODLE_28_STABLE DB=pgsql
+    - MOODLE_BRANCH=MOODLE_29_STABLE DB=mysqli
+    - MOODLE_BRANCH=MOODLE_30_STABLE DB=pgsql
 
 matrix:
   include:
     - php: 7.0
-      env: MOODLE_BRANCH=MOODLE_31_STABLE DB=pgsql
+      env: MOODLE_BRANCH=MOODLE_31_STABLE RUN_BEHAT=yes DB=pgsql
     - php: 7.0
-      env: MOODLE_BRANCH=MOODLE_32_STABLE DB=mysqli
+      env: MOODLE_BRANCH=MOODLE_32_STABLE RUN_BEHAT=yes DB=mysqli
 
 before_install:
+  - if [ "$RUN_BEHAT" = "yes" ]; then tests/idp/simplesamlphp.sh; fi
   - cd ../..
   - composer selfupdate
   - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
@@ -40,6 +46,7 @@ before_install:
 install:
   - git config --global "url.https://github.com/.insteadOf" "git@github.com:"
   - moodle-plugin-ci install -vvv
+  - echo '$CFG->cookiesecure = false;' >> moodle/config.php
 
 script:
   - moodle-plugin-ci phplint
@@ -51,4 +58,7 @@ script:
   - moodle-plugin-ci shifter
   - moodle-plugin-ci jshint
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  - if [ "$RUN_BEHAT" = "yes" ]; then moodle-plugin-ci behat; fi
+
+after_script:
+  - cat /tmp/behat_screenshots.base64
