--- a/extlib/xmlseclibs/composer.json
+++ b/extlib/xmlseclibs/composer.json
@@ -10,15 +10,12 @@
   ],
   "homepage": "https://github.com/robrichards/xmlseclibs",
   "autoload": {
-    "classmap": [
-      "src/"
-    ]
+    "psr-4": {
+      "RobRichards\\XMLSecLibs\\": "src"
+    }
   },
   "require": {
-      "php": ">= 5.2"
-   },
-  "suggest": {
-    "ext/openssl": "OpenSSL extension",
-    "ext/mcrypt": "MCrypt extension"
+    "php": ">= 5.4",
+    "ext-openssl": "*"
   }
 }
