--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,10 @@ matrix:
   include:
     - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
     - php: 7.1
       env: DB=mysqli MOODLE_BRANCH=master
 
