--- a/.travis.yml
+++ b/.travis.yml
@@ -33,19 +33,34 @@ matrix:
     - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
     - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
+    - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
     - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
     - php: 7.1
       env: DB=mysqli MOODLE_BRANCH=master
 
 before_install:
+  - export MOODLE_VERSION=$(echo "$MOODLE_BRANCH" | cut -d'_' -f 2)
+  - if [ "$MOODLE_VERSION" = "master" ] || [ "$MOODLE_VERSION" -ge 32 ]; then export CI=2; else export CI=1; fi
+  - echo $CI
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
   - tests/idp/simplesamlphp.sh
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - if [ "$CI" = 2 ]; then
+      nvm install 8.9;
+      nvm use 8.9;
+      composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2;
+    else
+      composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^1;
+    fi
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
@@ -53,13 +68,19 @@ install:
   - echo '$CFG->cookiesecure = false;' >> moodle/config.php
 
 script:
+# - moodle-plugin-ci validate
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd        # TODO needs fixing
-# - moodle-plugin-ci codechecker  # TODO needs fixing
-# - moodle-plugin-ci validate     # TODO need to fix the table names
-  - moodle-plugin-ci savepoints
-  - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt
+# - moodle-plugin-ci phpmd
+# - moodle-plugin-ci codechecker
+
+  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci csslint    ; fi
+  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci jshint     ; fi
+  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci shifter    ; fi
+
+  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci savepoints ; fi
+  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci mustache   ; fi
+  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci grunt      ; fi
+
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
