--- a/.travis.yml
+++ b/.travis.yml
@@ -17,33 +17,28 @@ cache:
     - $HOME/.composer/cache
     - $HOME/.npm
 
-php:
-  - 7.0
-
-env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
-  - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
-  - DB=mysqli MOODLE_BRANCH=master
-
+# Alternate tests with MySQL and PostgreSQL
 matrix:
   include:
+    # PHP 5.6
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+      env: DB=pgsql  MOODLE_BRANCH=MOODLE_27_STABLE
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
+      env: DB=pgsql  MOODLE_BRANCH=MOODLE_29_STABLE
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
+      env: DB=pgsql  MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
-    - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
+    # PHP 7.0
+    - php: 7.0
+      env: DB=pgsql  MOODLE_BRANCH=MOODLE_33_STABLE
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+    # PHP 7.1
     - php: 7.1
       env: DB=mysqli MOODLE_BRANCH=master
 
