--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd
+  - moodle-plugin-ci phpmd
 # - moodle-plugin-ci codechecker
 
   - if [ "$CI" -eq 1 ]; then moodle-plugin-ci csslint    ; fi
