--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
-# - moodle-plugin-ci codechecker
+  - moodle-plugin-ci codechecker
 
   - if [ "$CI" -eq 1 ]; then moodle-plugin-ci csslint    ; fi
   - if [ "$CI" -eq 1 ]; then moodle-plugin-ci jshint     ; fi
