--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,11 @@ matrix:
       env: DB=pgsql  MOODLE_BRANCH=MOODLE_33_STABLE
     - php: 7.0
       env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
     # PHP 7.1
     - php: 7.1
-      env: DB=pgsql  MOODLE_BRANCH=master
+      env: DB=mysqli  MOODLE_BRANCH=master
 
 before_install:
   - export MOODLE_VERSION=$(echo "$MOODLE_BRANCH" | cut -d'_' -f 2)
