--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ sudo: required
 addons:
   hosts:
     - simplesamlphp.test
-  firefox: "35.0.1"
-  postgresql: "9.3"
+  firefox: "47.0.1"
+  postgresql: "9.4"
   apt:
     packages:
       - oracle-java9-installer
@@ -24,46 +24,21 @@ cache:
 # Alternate tests with MySQL and PostgreSQL
 matrix:
   include:
-    # PHP 5.5
-    - php: 5.5
-      env: DB=pgsql  MOODLE_BRANCH=MOODLE_27_STABLE
-    - php: 5.5
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-    - php: 5.5
-      env: DB=pgsql  MOODLE_BRANCH=MOODLE_29_STABLE
-    # PHP 5.6
-    - php: 5.6
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-    - php: 5.6
-      env: DB=pgsql  MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 5.6
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
-    # PHP 7.0
-    - php: 7.0
-      env: DB=pgsql  MOODLE_BRANCH=MOODLE_33_STABLE
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
     - php: 7.0
       env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    # PHP 7.1
     - php: 7.1
       env: DB=mysqli  MOODLE_BRANCH=master
+    - php: 7.2
+      env: DB=pgsql  MOODLE_BRANCH=master
 
 before_install:
-  - export MOODLE_VERSION=$(echo "$MOODLE_BRANCH" | cut -d'_' -f 2)
-  - if [ "$MOODLE_VERSION" = "master" ] || [ "$MOODLE_VERSION" -ge 32 ]; then export CI=2; else export CI=1; fi
-  - echo $CI
   - phpenv config-rm xdebug.ini
   - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - bash tests/idp/simplesamlphp.sh
   - cd ../..
-  - if [ "$CI" = 2 ]; then
-      nvm install 8.9;
-      nvm use 8.9;
-      composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2;
-    else
-      composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^1;
-    fi
+  - nvm install 8.9
+  - nvm use 8.9
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
@@ -75,20 +50,14 @@ install:
 script:
   # Run lint on extlib as composer may fetch newer PHP version of libs during update.
   - find moodle/auth/saml2/extlib -type f -name '*.php' -exec php -l {} \; | (! grep -v "No syntax errors detected" )
-
-  - moodle-plugin-ci validate
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-
-  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci csslint    ; fi
-  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci jshint     ; fi
-  - if [ "$CI" -eq 1 ]; then moodle-plugin-ci shifter    ; fi
-
-  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci savepoints ; fi
-  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci mustache   ; fi
-  - if [ "$CI" -eq 2 ]; then moodle-plugin-ci grunt      ; fi
-
+  - moodle-plugin-ci validate
+  - moodle-plugin-ci savepoints
+  - moodle-plugin-ci mustache
+  - moodle-plugin-ci grunt
+  #- moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
