--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 
 addons:
   firefox: "47.0.1"
-  postgresql: "9.4"
+  postgresql: "9.5"
   apt:
     packages:
       - openjdk-8-jre-headless
@@ -32,7 +32,11 @@ matrix:
     - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.2.0
     - php: 7.2
-      env: DB=mysqli  MOODLE_BRANCH=master NODE_VERSION=14.2.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2.0
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.2.0
+    - php: 7.2
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.2.0
 
 before_install:
   - phpenv config-rm xdebug.ini
