--- a/.github/workflows/35.yml
+++ b/.github/workflows/35.yml
@@ -1,4 +1,4 @@
-name: Moodle plugin CI
+name: 3.5 branch test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
