--- a/.github/workflows/38-master.yml
+++ b/.github/workflows/38-master.yml
@@ -4,7 +4,7 @@ name: 3.8 and higher branch test
 # events but only for the master branch
 # Run this workflow every time a new commit pushed to your repository
 
-on: push
+on: [push, pull_request]
 
 jobs:
   citest:
