Limit mariadb GH workflow to master only.

--- a/.github/workflows/35.yml
+++ b/.github/workflows/35.yml
@@ -25,22 +25,10 @@ jobs:
         ports:
           - 5432:5432
 
-      mariadb:
-        image: mariadb:10
-        env:
-          MYSQL_USER: 'root'
-          MYSQL_ALLOW_EMPTY_PASSWORD: "true"
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 3
     strategy:
       fail-fast: false
       matrix:
-        database: ['pgsql', 'mariadb']
+        database: ['pgsql']
         moodle-branch: ['MOODLE_35_STABLE']
         php: ['7.2']
 
