--- a/.github/workflows/38-master.yml
+++ b/.github/workflows/38-master.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        database: ['pgsql', 'mariadb']
+        database: ['pgsql']
         moodle-branch: ['MOODLE_38_STABLE','MOODLE_39_STABLE', 'MOODLE_310_STABLE', 'MOODLE_311_STABLE', 'master']
         php: ['7.2', '7.4']
         exclude:
@@ -49,6 +49,10 @@ jobs:
             php: 7.2
           - moodle-branch: MOODLE_311_STABLE
             php: 7.2
+        include:
+          - moodle-branch: master
+            php: 7.4
+            database: mariadb
 
     steps:
       - name: Check out repository code
