Add privacy api check to github actions.

--- a/.github/workflows/39-master.yml
+++ b/.github/workflows/39-master.yml
@@ -118,7 +118,11 @@ jobs:
 
       - name: Run phpunit
         if: ${{ always() }}
-        run: moodle-plugin-ci phpunit
+        run: |
+          moodle-plugin-ci phpunit
+          cd moodle
+          vendor/bin/phpunit --fail-on-risky --disallow-test-output --filter tool_dataprivacy_metadata_registry_testcase
+          vendor/bin/phpunit --fail-on-risky --disallow-test-output --testsuite core_privacy_testsuite --filter provider_testcase
 
       - name: Run behat
         if: ${{ always() }}
