--- a/.github/workflows/39-master.yml
+++ b/.github/workflows/39-master.yml
@@ -1,7 +1,6 @@
 name: 3.9 and higher branch test
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. Triggers the workflow on push or pull request events
 # Run this workflow every time a new commit pushed to your repository
 
 on: [push, pull_request]
@@ -42,17 +41,11 @@ jobs:
       fail-fast: false
       matrix:
         database: ['pgsql']
-        moodle-branch: ['MOODLE_39_STABLE', 'MOODLE_310_STABLE', 'MOODLE_311_STABLE', 'master']
+        moodle-branch: ['MOODLE_39_STABLE', 'MOODLE_310_STABLE', 'MOODLE_311_STABLE']
         php: ['7.2', '7.4']
         exclude:
-          - moodle-branch: master
-            php: 7.2
           - moodle-branch: MOODLE_311_STABLE
             php: 7.2
-        include:
-          - moodle-branch: master
-            php: 7.4
-            database: mariadb
 
     steps:
       - name: Check out repository code
